preparando deploy star wars

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://rafaelribeiro96.github.io/project-trybewallet",
+{ "homepage": "https://rafaelribeiro96.github.io/project-starwars-planets-search",
   "name": "sd-0x-project-react-context-hooks-starwars-datatable-filters",
   "version": "0.1.0",
   "private": true,
